--- a/auth-dev.yml
+++ b/auth-dev.yml
@@ -5,9 +5,9 @@ spring:
     name: auth-service
   rabbitmq:
     virtual-host: /leyou
-    username: /leyou
-    password: leyou
-    host: 192.168.19.121
+    username: root
+    password: 123456
+    host: 127.0.0.1:10086
 eureka:
   client:
     service-url:
