--- a/goodsweb-dev.yml
+++ b/goodsweb-dev.yml
@@ -6,7 +6,7 @@ spring:
   thymeleaf:
     cache: false
   rabbitmq:
-    virtual-host: /leyou
+    virtual-host: /haha
     username: mq
     password: 123456
     host: 127.0.0.1  
