--- a/cart-dev.yml
+++ b/cart-dev.yml
@@ -6,7 +6,7 @@ spring:
   redis:
     host: 127.0.0.1
   rabbitmq:
-    virtual-host: /
+    virtual-host: /haha
     username: qm
     password: 123456
     host: 127.0.0.1
