--- a/comments-dev.yml
+++ b/comments-dev.yml
@@ -17,9 +17,9 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 10
   rabbitmq:
-    virtual-host: /leyou
-    username: guest
-    password: guest
+    virtual-host: /haha
+    username: mq
+    password: 123456
     host: 127.0.0.1
   redis:
     host: 127.0.0.1
