--- a/seckill-dev.yml
+++ b/seckill-dev.yml
@@ -8,7 +8,7 @@ spring:
   data:
     elasticsearch:
       cluster-name: elasticsearch
-      cluster-nodes: 192.168.19.121:9300
+      cluster-nodes: 192.168.152.142:9300
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/leyou?characterEncoding=UTF-8&useSSL=false
     username: root
@@ -18,9 +18,9 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 10
   rabbitmq:
-    virtual-host: /leyou
-    username: guest
-    password: guest
+    virtual-host: /haha
+    username: mq
+    password: 123456
     host: 127.0.0.1
     template:
       exchange: leyou.order.exchange
