--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -4,9 +4,9 @@ spring:
   application:
     name: api-gateway
   rabbitmq:
-    virtual-host: /leyou
-    username: guest
-    password: guest
+    virtual-host: /haha
+    username: qm
+    password: 123456
     host: 127.0.0.1
 eureka:
   client:
