--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: api-gateway
   rabbitmq:
     virtual-host: /haha
-    username: qm
+    username: mq
     password: 123456
     host: 127.0.0.1
 eureka:
