--- a/user-dev.yml
+++ b/user-dev.yml
@@ -11,12 +11,12 @@ spring:
       maximum-pool-size: 20
       minimum-idle: 10
   redis:
-    host: 192.168.19.121
+    host: 127.0.0.1
   rabbitmq:
-    host: 192.168.19.121
-    username: /leyou
-    password: leyou
-    virtual-host: /leyou
+    host: 127.0.0.1
+    username: mq
+    password: 123456
+    virtual-host: /haha
     template:
       retry:
         enabled: true
