--- a/sms-dev.yml
+++ b/sms-dev.yml
@@ -11,7 +11,7 @@ spring:
 
 leyou:
   sms:
-    accessKeyId: LTAIc259TULYzaS7
-    accessKeySecret: 1uh79I1UAmwQ4YWsSmOgxw7JEBGA0v
+    accessKeyId: LTAI196Huj2cCYqr
+    accessKeySecret: 4TP1rYJuBvGcAFcws0W0FJ0c9oUqkV
     signName: 乐优商城
     verifyCodeTemplate: SMS_148614415
